--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <div class="logo">
             <!-- Use either logo image or text title -->
             <!-- <img src="/WhatsApp Image 2025-05-16 at 22.43.51.jpeg" alt="Liyafa Events Logo"> -->
-             <img src="/event-logo.jpeg.jpeg" alt="">
+             <img src="./event-logo.jpeg.jpeg" alt="">
            
             <div class="logo-address">Designing events that speak your story</div>
         </div>
